<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.camunda.optimize</groupId>
  <artifactId>parent</artifactId>
  <version>2.4.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <modules>
    <!-- client should be built before distro -->
    <module>client</module>
    <module>util</module>
    <module>plugin</module>
    <module>backend</module>
    <module>qa</module>
    <module>distro</module>
    <module>upgrade</module>
  </modules>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <project.previousVersion>2.3.0</project.previousVersion>

    <maven.compiler.target>1.8</maven.compiler.target>
    <maven.compiler.source>1.8</maven.compiler.source>

    <jackson.version>2.9.8</jackson.version>
    <jsonpath.version>2.3.0</jsonpath.version>
    <elasticsearch.version>6.5.4</elasticsearch.version>
    <!--The least supported elasticsearch version we should test against-->
    <elasticsearch.test.version>6.2.0</elasticsearch.test.version>
    <!-- https://www.elastic.co/guide/en/elasticsearch/client/java-api/6.0/_using_another_logger.html -->
    <elasticsearch.log4j.version>2.9.1</elasticsearch.log4j.version>
    <spring.version>5.1.4.RELEASE</spring.version>
    <mockito.version>2.23.4</mockito.version>
    <httpclient.version>4.5.2</httpclient.version>
    <hamcrest.version>1.3</hamcrest.version>
    <junit.version>4.12</junit.version>
    <quartz.version>2.3.0</quartz.version>

    <logback.version>1.2.3</logback.version>
    <slf4j.version>1.7.25</slf4j.version>

    <version.node>v8.11.3</version.node>
    <version.yarn>v1.7.0</version.yarn>
    <skip.fe.build>false</skip.fe.build>

    <skip.docker>false</skip.docker>
    <database>h2</database>
    <docker.compose.file>docker-compose.yml</docker.compose.file>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-framework-bom</artifactId>
        <version>${spring.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson</groupId>
        <artifactId>jackson-bom</artifactId>
        <version>${jackson.version}</version>
        <scope>import</scope>
        <type>pom</type>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <profiles>
    <profile>
      <id>engine-latest</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <camunda.engine.version>7.10.0</camunda.engine.version>
        <web.xml>latest</web.xml>
      </properties>
    </profile>

    <profile>
      <id>engine-7.9</id>
      <properties>
        <camunda.engine.version>7.9.7</camunda.engine.version>
        <web.xml>latest</web.xml>
      </properties>
    </profile>

    <profile>
      <id>engine-7.8</id>
      <properties>
        <camunda.engine.version>7.8.13</camunda.engine.version>
        <web.xml>7.8</web.xml>
      </properties>
    </profile>

    <profile>
      <id>postgresql</id>
      <properties>
        <database>postgresql</database>
        <docker.compose.file>docker-compose.postgresql.yml</docker.compose.file>
      </properties>
    </profile>

    <profile>
      <id>release</id>
      <properties>
        <skip.docker>true</skip.docker>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-release-plugin</artifactId>
            <version>2.5.3</version>
            <configuration>
              <releaseProfiles>production,engine-latest</releaseProfiles>
              <localCheckout>true</localCheckout>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.0.1</version>
            <executions>
              <execution>
                <id>attach-sources</id>
                <phase>package</phase>
                <goals>
                  <goal>jar-no-fork</goal>
                </goals>
              </execution>
              <execution>
                <id>attach-test-sources</id>
                <phase>package</phase>
                <goals>
                  <goal>test-jar-no-fork</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>2.10.4</version>
            <configuration>
              <quiet>true</quiet>
            </configuration>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.sonatype.plugins</groupId>
            <artifactId>nexus-staging-maven-plugin</artifactId>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>templating-maven-plugin</artifactId>
          <version>1.0.0</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>build-helper-maven-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.21.0</version>
          <configuration>
            <redirectTestOutputToFile>true</redirectTestOutputToFile>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>2.21.0</version>
          <configuration>
            <redirectTestOutputToFile>true</redirectTestOutputToFile>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-war-plugin</artifactId>
          <version>3.2.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-shade-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>
        <plugin>
          <groupId>com.webcohesion.enunciate</groupId>
          <artifactId>enunciate-maven-plugin</artifactId>
          <version>2.10.1</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>1.6.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>1.8</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.cargo</groupId>
          <artifactId>cargo-maven2-plugin</artifactId>
          <version>1.6.8</version>
        </plugin>
        <plugin>
          <groupId>org.sonatype.plugins</groupId>
          <artifactId>nexus-staging-maven-plugin</artifactId>
          <version>1.6.7</version>
          <extensions>true</extensions>
          <configuration>
            <serverId>camunda-nexus</serverId>
            <nexusUrl>https://app.camunda.com/nexus/</nexusUrl>
            <skipStaging>true</skipStaging>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>
        <plugin>
          <groupId>com.github.eirslett</groupId>
          <artifactId>frontend-maven-plugin</artifactId>
          <version>1.6</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.sonatype.plugins</groupId>
        <artifactId>nexus-staging-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>

  <distributionManagement>
    <snapshotRepository>
      <id>camunda-nexus</id>
      <url>https://app.camunda.com/nexus/content/repositories/camunda-optimize-snapshots</url>
    </snapshotRepository>
    <repository>
      <id>camunda-nexus</id>
      <url>https://app.camunda.com/nexus/content/repositories/camunda-optimize</url>
    </repository>
  </distributionManagement>

  <scm>
    <url>https://github.com/camunda/camunda-optimize</url>
    <connection>scm:git:git@github.com:camunda/camunda-optimize.git</connection>
    <developerConnection>scm:git:git@github.com:camunda/camunda-optimize.git</developerConnection>
    <tag>HEAD</tag>
  </scm>

  <issueManagement>
    <system>Jira</system>
    <url>https://app.camunda.com/jira/browse/OPT/</url>
  </issueManagement>

  <organization>
    <name>Camunda Services GmbH</name>
    <url>http://www.camunda.com</url>
  </organization>

  <!-- Fix for bug with downloading snapshots from Camunda Nexus using groups with RELEASE and SNAPSHOTS -->
  <repositories>
    <repository>
      <id>test</id>
      <url>http://repository</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>

    <!-- add the elasticsearch repo -->
    <repository>
      <id>elasticsearch-releases</id>
      <url>https://artifacts.elastic.co/maven</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <layout>default</layout>
    </repository>
  </repositories>

</project>
